--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     background: #f1f2f3;
 }
@@ -740,7 +745,7 @@ input[type='radio']:checked:after {
     color: #2F2F2F;
     font-weight: 600;
 }
-.dropdown-menu.show {
+table .dropdown-menu.show {
     height: 122px;
     overflow-y: scroll;
 }
@@ -2110,8 +2115,16 @@ hr.total-hr {
     display: none !important;
 }
 /***TABLE-CSS-END-HERE*****/
-
+.new-cat-design .content-body {
+    min-height: auto !important;
+}
 /***media-start-here***/
+
+@media(max-width: 1400px){
+    .footer {
+    margin-left: 312px;
+    }
+}
 
 @media(max-width:1199px) {
     #paymentOverviewSection .form-control {
@@ -2155,6 +2168,10 @@ hr.total-hr {
     [data-sidebar-style="mini"][data-layout="vertical"] .deznav .metismenu > li.mm-active > a {
     background: transparent;
     color: #1b55e2;
+    }
+    .footer {
+    margin-left: 122px;
+    padding-left: 0 !important;
     }
 }
 
@@ -2256,6 +2273,13 @@ hr.total-hr {
     }
     [data-sidebar-style="full"] .header, [data-sidebar-style="overlay"] .header {
     padding-left: 0;
+    }
+    .footer {
+    margin-left: 0;
+    }
+    .header .header-right .dropdown-menu {
+    position: absolute;
+    height: auto;
     }
 }
 
